feat: added http-server

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "devDependencies": {
-    "typescript": "^5.4.3",
+    "@types/node": "20.12.7",
     "gts": "^5.3.1",
-    "@types/node": "20.12.7"
+    "http-server": "^14.1.1",
+    "typescript": "^5.4.3"
   },
   "scripts": {
     "lint": "gts lint",
