chore: install octokit for github

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run lint"
+  },
+  "dependencies": {
+    "octokit": "^4.0.2"
   }
 }
