--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@types/node": "20.12.7",
     "gts": "^5.3.1",
     "http-server": "^14.1.1",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "webpack": "^5.95.0",
+    "webpack-dev-server": "^5.1.0"
   },
   "scripts": {
     "start": "npx http-server ./src",
