--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "type":"module",
+  "type": "module",
   "devDependencies": {
+    "@types/geojson": "^7946.0.14",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "20.12.7",
     "gts": "^5.3.1",
     "http-server": "^14.1.1",
