feat: added target & lib to tsconfig

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "webpack-dev-server": "^5.1.0"
   },
   "scripts": {
-    "start": "npx http-server ./src",
+    "start": "npx http-server ./build",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
