--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "build",
+    "lib": ["ES2023", "DOM"],
+    "target": "ES2015",
   },
   "include": [
     "src/**/*.ts",
