--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "npx http-server ./build",
     "lint": "gts lint",
     "clean": "gts clean",
-    "compile": "tsc",
+    "compile": "tsc --skipLibCheck",
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
