--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,13 @@
   "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "build",
-    "lib": ["ES2023", "DOM"],
+    "outDir": "./build",
+    "lib": ["ES2022", "DOM"],
     "target": "ES2015",
+    "module": "ES2015",
+
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*.ts",
